Fix Scrollbar color

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -69,15 +69,18 @@ body,
 }
 
 ::-webkit-scrollbar {
-  width: 3.5px;
+  width: 0.3rem;
 }
 
 ::-webkit-scrollbar-track {
+  background: rgb(0, 0, 0); 
+
+
   border-radius: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 1); 
+  background: rgb(255, 255, 255); 
   border-radius: 2px;
 }
 
